我也不知道你传了啥

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "圣宝龙",
-    "appid" : "__UNI__EAB3ACD",
+    "name" : "澳门钱贷",
+    "appid" : "__UNI__B8E170F",
     "description" : "",
     "versionName" : "1.0.2",
     "versionCode" : "100",
